kubeflow-deployment/kubeflow_CD/manifests/oauth2-proxy-ca-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: deploykf-auth
spec:
  template:
    spec:
      containers:
        - name: oauth2-proxy
          volumeMounts:
            - name: cluster-ca
              mountPath: /etc/ssl/certs/ca.crt
              subPath: ca.crt
              readOnly: true
      volumes:
        - name: cluster-ca
          secret:
            secretName: cluster-ca
